# agent-chat-hub

./: .gitignore  CHANGELOG.md  INSTALL.md  PRD-DISCUSS-基于分析文档-OMC-ARTIFACTS-1784301659.md  README.md  init_config.py  main.py  project-state.json  pyproject.toml  test_gemini_http.py
.collab/: events.jsonl  state.json
.collab/ai-role-system/: .yamllint  IMPLEMENTATION-GUIDE.md  PHASE1-DELIVERABLES.md  PHASE2-PLAN.md  QUICKSTART.md  README.md
.collab/artifacts/: DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r0-claude-20260717-150418.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r1-codex-20260717-150608.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r1-gemini-20260717-150450.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r2-codex-20260717-150723.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r3-codex-20260717-150817.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r3-gemini-20260717-150744.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r4-codex-20260717-150913.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r4-gemini-20260717-150844.md  DISCUSS-AGENT-CHAT-HUB新增用户需求分析-1784300658-discuss-r5-codex-20260717-151007.md  DISCUSS-AGENT-CHAT-HUB角色系统与团队协作机制设计-1784625267-discuss-r0-claude-20260721-091427.md  DISCUSS-AGENT-CHAT-HUB角色系统与团队协作机制设计-1784625267-discuss-r1-codex-20260721-091507.md  DISCUSS-AGENT-CHAT-HUB角色系统与团队协作机制设计-1784625267-discuss-r2-codex-20260721-091559.md  P1问题契约定义文档-v2-三方共识版.md  P1问题契约定义文档.md  (+22 more)
benchmarks/: benchmark_phase2.py
config/: agents.json  config.template.yaml  models.json
docs/: GitHub项目Agent角色与Team建立方法研究.md  LESSON-gemini-http-vs-cli.md  MIGRATION.md  MODEL-INTEGRATION-GUIDE.md  参考项目Agent角色与Team建立方法分析.md  技术选型分析报告.md  角色系统与团队协作实施计划.md  角色系统与模型匹配方案分析.md
src/: __init__.py
tests/: __init__.py  test_coordinator.py  test_integration_phase2.py  test_message_bus.py  test_plugin_loader.py  test_tui.py
(+77 files in other folders)
