[project]
name = "agent-chat-hub"
version = "0.1.0"
description = "多模型Agent聊天系统"
authors = [
    {name = "caohui"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # TUI framework
    "textual>=0.50.0",
    # Core dependencies
    "pydantic>=2.7.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    # API key security
    "keyring>=25.0.0",
    # LangGraph and state management
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=1.0.0",
    "langchain-core>=0.3.0",
    # Database
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py314']

[tool.ruff]
line-length = 100
target-version = "py314"
